--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 /resultados
 
 todasLicitacionesContratos.json
+todasLicitacionesHasta082021NoRepeat.json
+todosContratosHasta082021NoRepeat.json
+contratosYlicitaciones092021NoRepeat.json
