--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
+    "eslint": "^8.25.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.3.0",
+    "eslint-plugin-promise": "^6.0.1",
     "nodemon": "^2.0.7"
   }
 }
