--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "appxml2json",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "run": "node index.js",
-    "lint": "eslint ."
-  },
-  "author": "mam",
-  "license": "MIT",
-  "dependencies": {
-    "node-stream-zip": "1.13.4",
-    "readline-sync": "1.4.10",
-    "xml2js": "0.4.23"
-  },
-  "devDependencies": {
-    "eslint": "^8.37.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "nodemon": "2.0.7",
-    "prettier": "^2.8.7"
-  }
+	"name": "appxml2json",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"run": "node index.js",
+		"lint": "eslint ."
+	},
+	"author": "mam",
+	"license": "MIT",
+	"dependencies": {
+		"node-stream-zip": "1.13.4",
+		"readline-sync": "1.4.10",
+		"xml2js": "0.4.23"
+	},
+	"devDependencies": {
+		"eslint": "8.37.0",
+		"eslint-config-prettier": "8.8.0",
+		"eslint-plugin-prettier": "4.2.1",
+		"nodemon": "2.0.7",
+		"prettier": "2.8.7"
+	}
 }
